src/objects/Zendesk_Tickets_Statistics__c.object
<CustomObject>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_of_Tickets_Created__c</fullName>
        <label>Number of Tickets Created</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plan__c</fullName>
        <label>Plan</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Zendesk Tickets Statistic</label>
    <nameField>
        <label>Zendesk Tickets Statistics Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zendesk Tickets Statistics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>